sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: too many arguments for method setValue: (x$1: Int, x$2: Int)Unit
        setValue(i-k,+1,getValue(i-k))
                ^