sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n=getValueCount()
  var v=0
  var indice=0
  for (i<- 1 to n-1){
    v=getValue(i)
    for (k<-1 to i){
      if (getValue(i-k)>v){
        setValue(i-k,+1,getValue(i-k))
        indice=i-k
      }
    }
    setValue(indice,v)
  }
}